# TCGC_TACITUS-Conflict-Grammar-Corpus_BENCHMARK

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASHEET.md  DATA_USE_AGREEMENT.md  LICENSE  Makefile  README.md  RESULTS.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  submission.yml  task_type_proposal.yml
.github/workflows/: ci.yml  docs.yml  leaderboard.yml  release.yml
agreement/: index.html
baselines/: __init__.py  graphrag_baseline.py  rag_baseline.py  zeroshot_anthropic.py  zeroshot_openai.py
corpora/: README.md
corpora/public-domain/: caesar-gallic-wars.json  federalist-papers.json  leviathan.json  melian-dialogue.json  the-art-of-war.json  the-prince.json
docs/: agreement.md  domains.md  index.md  leaderboard.md  methodology.md  metrics.md  open-questions.md  quickstart.md  roadmap.md  submission-guide.md  task-types.md
domains/: index.html
examples/llm-vs-praxis/: README.md
examples/llm-vs-praxis/melian-leverage/: INPUT.md  diff.md  praxis.jsonl  vanilla.md
experiments/llm_vs_typed/: README.md  __init__.py  compare.py  orchestrate.py  runner.py
experiments/llm_vs_typed/clients/: __init__.py  anthropic_client.py  base.py  echo_client.py  openai_client.py
experiments/llm_vs_typed/prompts/: typed.txt  vanilla.txt
items/: README.md  manifest.json
items/v0.1-sample/: tcgc-0001.json  tcgc-0002.json  tcgc-0003.json  tcgc-0004.json  tcgc-0005.json
items/v0.2-public-domain/: tcgc-0010.json  tcgc-0011.json  tcgc-0012.json  tcgc-0013.json  tcgc-0014.json  tcgc-0015.json  tcgc-0016.json  tcgc-0017.json  tcgc-0018.json  tcgc-0019.json
leaderboard/: index.html  v0.1-sample.json
methodology/: index.html
metrics/: index.html
open-questions/: index.html
quickstart/: index.html
roadmap/: index.html
schema/: README.md  submission-v0.1.json  tcgc-v0.1.json
scripts/: bootstrap.sh  build_manifest.py  check_provenance.py
search/: search_index.json
submission-guide/: index.html
submissions/: README.md
synthetic/: README.md
synthetic/scripts/: generate.py
synthetic/templates/: commitment_tracking.j2
task-types/: index.html
tcgc/: __init__.py  cli.py  io.py  score.py  types.py  validate.py
tcgc/adapters/: __init__.py  _common.py  helm.py  lm_eval.py
tcgc/ontology/: __init__.py  aco.py  edges.py
tcgc/reporting/: card.py  summary.py
tcgc/scoring/: __init__.py  contradiction_pair_f1.py  graph_overlap.py  kendall_tau.py  llm_judge_anchored.py  provenance_f1.py
tcgc/scoring/anchors/: v0.1.jsonl
tests/: conftest.py  test_adapters_helm.py  test_adapters_lm_eval.py  test_cli.py  test_experiments.py  test_io.py  test_ontology.py  test_schema.py  test_scoring_contradiction_pair_f1.py  test_scoring_graph_overlap.py  test_scoring_kendall_tau.py  test_scoring_llm_judge_anchored.py  test_scoring_provenance_f1.py  test_validate.py
