[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "tcgc"
version = "0.1.0"
description = "TACITUS Conflict Grammar Corpus — an open benchmark for conflict reasoning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "Giulio Catanzariti", email = "giuliocatanzariti@gmail.com" }]
maintainers = [{ name = "Giulio Catanzariti", email = "giuliocatanzariti@gmail.com" }]
keywords = ["benchmark", "nlp", "conflict", "ontology", "neurosymbolic", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jsonschema>=4.22",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "scipy>=1.13",
    "numpy>=1.26",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "hypothesis>=6.100", "mypy>=1.10", "ruff>=0.4", "pre-commit>=3.7"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocs-gen-files>=0.5"]
baselines = ["openai>=1.30", "anthropic>=0.28", "sentence-transformers>=2.7", "scikit-learn>=1.4"]
experiments = ["openai>=1.30", "anthropic>=0.28"]
adapters = ["lm-eval>=0.4"]

[project.urls]
Homepage = "https://www.tacitus.me/research/tcgc"
Repository = "https://github.com/tacitus-me/tcgc"
Issues = "https://github.com/tacitus-me/tcgc/issues"

[project.scripts]
tcgc = "tcgc.cli:app"
tcgc-experiment = "experiments.llm_vs_typed.orchestrate:main"

[tool.hatch.build.targets.wheel.force-include]
"experiments" = "experiments"

[tool.hatch.build.targets.wheel]
packages = ["tcgc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","W","I","N","UP","B","A","C4","SIM","PL","RUF"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"baselines/**" = ["PLC0415", "E501"]
"tests/**" = ["PLR2004", "PLC0415", "RUF043"]
"synthetic/**" = ["PLC0415"]
"experiments/**" = ["PLC0415", "BLE001"]
"tcgc/cli.py" = ["PLC0415"]
"tcgc/ontology/aco.py" = ["E501"]
"tcgc/scoring/llm_judge_anchored.py" = ["PLC0415", "PLR2004"]
"tcgc/scoring/graph_overlap.py" = ["PLR2004", "E501"]
"tcgc/validate.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["scipy.*","lm_eval.*","helm.*","sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "requires_api: test that calls a paid model API (skipped unless TCGC_RUN_API=1)",
    "slow: slow test",
]

[tool.coverage.run]
source = ["tcgc"]
omit = ["tcgc/adapters/*", "baselines/*"]

[tool.coverage.report]
fail_under = 90
exclude_lines = ["pragma: no cover","raise NotImplementedError","if TYPE_CHECKING:"]
